--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ regex==2023.10.3
 Requests==2.31.0
 scipy==1.12.0
 setuptools==68.2.2
-skimage==0.0
+scikit-image==0.23.2
 submitit==1.5.1
 tensorboardX==2.6.2.2
 tensorflow==2.16.1
